fix: solve issue that caused the tooltip in data table to be cut due to overflow

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -332,10 +332,10 @@ ul {
   max-width: 100vw;
   display: flex;
   justify-content: center;
-  overflow: auto;
   white-space: nowrap;
 
   table {
+    overflow-y: auto;
     border-spacing: 0;
     box-shadow: 0 0 8px -2px $box-shadow-color;
     @media only screen and (max-width: $sm) {
